assets/css/common/post-entry.css
.first-entry {
    position: relative;
    min-height: 0px;
    margin: var(--gap) 0 calc(var(--gap) * .5) 0;
}

.first-entry .entry-header {
    overflow: hidden;
    display: -webkit-box;
    -webkit-box-orient: vertical;
    margin: var(--gap) 0 calc(var(--gap) * 2);
}

.first-entry .entry-header h1 {
    font-size: 34px;
    line-height: 1.3;
}

@media screen and (max-width: 400px) {
    .first-entry .entry-header h1 {
        font-size: 30px;
    }
}

.first-entry .entry-content {
    margin: 14px 0;
    font-size: 17px;
    color: var(--primary);
    line-height: 1.4em;
    display: block;
    overflow: initial;
    /* fix <mark> edge get cut */
}

.first-entry .entry-content p {
    margin-bottom: .8em;
}

.first-entry .entry-content li p {
    margin-bottom: .5em;
}

.first-entry .entry-footer {
    font-size: 14px;
}

.home-info .entry-content {
    -webkit-line-clamp: unset;
}

.post-entry {
    position: relative;
    margin-bottom: calc(var(--gap)/2);
    padding: calc(var(--gap)*.75);
    background: var(--tertiary-bg);
    border-radius: var(--radius);
}

.post-entry:hover {
    transform: scale(1.02) translate3d(0, 0, 0);
    box-shadow: 1px 16px 29px -5px rgba(0, 0, 0, 0.75);
}

.post-entry:hover .entry-header h2 {
    color: var(--link-hover-color);
    box-shadow: var(--link-hover-underline-shadow);
}

.post-entry:active {
    transform: scale(0.97);
}

.tag-entry .entry-cover {
    display: none;
}

.entry-header h2 {
    font-size: 16px;
    line-height: 1.0;
    transition: var(--link-transition);
    display: inline-block;
}

.entry-content {
    margin: 8px 0;
    color: var(--secondary);
    font-size: 14px;
    line-height: 1.4em;
    overflow: hidden;
    display: -webkit-box;
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 2;
}

.entry-content.search {
    display: block;
    float: right;
}

.entry-footer,
.entry-footer span>a {
    color: var(--secondary);
    font-size: 13px;
}

.entry-link {
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
}

.entry-cover,
.entry-isdraft {
    font-size: 14px;
    color: var(--secondary);
}

.entry-cover {
    margin-bottom: var(--gap);
    text-align: center;
}

.entry-cover img {
    border-radius: var(--radius);
    width: 100%;
    height: auto;
    image-rendering: -webkit-optimize-contrast;
}

.entry-cover a {
    color: var(--secondary);
    box-shadow: 0 1px 0 var(--primary);
}

/* for dropcaps */
.post-content > p:first-of-type::first-letter {
    color: var(--primary);
    font-size: 3.0em;
    float: left;
    margin-right: 0.2em;
    line-height: 1.0em;
  }

